version 5 - pravidlá by mali byť OK, už len doladiť detaily - presunú treasure card application to action phase